<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".ui.main.auth.OtpCode">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_loginbg"
        android:elevation="1dp">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_35sdp"
                android:src="@drawable/ic_otpimg" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/forgetPassword"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/otp_text"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.poovam.pinedittextfield.SquarePinField
                android:id="@+id/pinField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="number"
                app:cornerRadius="@dimen/_10sdp"
                app:fieldColor="@color/orange" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lineraLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pinField"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_receive" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/otpTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/resend_code"
                    android:textColor="#06325F"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeLeft"
                android:layout_below="@+id/lineraLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_left"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"/>


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
</layout>