<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/content"
        android:background="@drawable/ic_subscription_bg"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/ic_back_btn"
            android:id="@+id/ic_back_btn"
            android:layout_margin="@dimen/_10sdp"
            />
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                >


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sub_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/subscription"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sub_text"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/subscription_des"
                    android:id="@+id/sub_des"
                    android:textColor="@color/txt_color"
                    android:textSize="@dimen/_15sdp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/sub_des"
                    android:gravity="center"
                    android:id="@+id/cardOne"
                    android:layout_height="wrap_content"
                    >

                    <RelativeLayout
                        android:id="@+id/bg_card"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:background="@drawable/bg_card_subs">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/roleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_35sdp"
                            android:fontFamily="@font/poppins_bold"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="@dimen/_18sdp" />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_70sdp"
                        android:orientation="horizontal"
                        >

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvOne"
                            android:layout_width="@dimen/_90sdp"
                            android:layout_height="@dimen/_135sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            app:cardBackgroundColor="@color/orange"
                            app:cardCornerRadius="@dimen/_100sdp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/imageCard"
                                    android:layout_width="@dimen/_60sdp"
                                    android:layout_height="@dimen/_60sdp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/_15sdp"
                                    app:cardCornerRadius="@dimen/_200sdp">

                                    <androidx.appcompat.widget.AppCompatImageView
                                        android:id="@+id/ivImage"
                                        android:layout_width="@dimen/_30sdp"
                                        android:layout_height="@dimen/_30sdp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_property_sub" />
                                </androidx.cardview.widget.CardView>

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tvTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imageCard"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="122121"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_12sdp" />

                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/cardOne"
                    android:gravity="center"

                    android:id="@+id/cardTwo"
                    android:layout_height="wrap_content"
                    >

                    <RelativeLayout
                        android:id="@+id/bg_card_two"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:background="@drawable/sub_card_two">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/unitText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_35sdp"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/how_many_units"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_18sdp" />

                        <RelativeLayout
                            android:id="@+id/spinner_Layout"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:layout_marginEnd="@dimen/_30sdp"
                            android:layout_marginBottom="@dimen/_40sdp"

                            android:background="@drawable/rounded_spinner">

                            <com.example.luck_rent_android.ui.main.spinn.MaterialSpinner
                                android:id="@+id/spinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:textSize="@dimen/_10sdp"
                                android:layout_marginEnd="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_3sdp"
                                android:spinnerMode="dropdown"
                                android:textAlignment="center" />
                        </RelativeLayout>

                    </RelativeLayout>
                </RelativeLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/priceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/cardTwo"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="$ 12.50 / month"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/_18sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@id/priceText"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/roundbutton"
                    android:padding="10dp"
                    android:text="Subscribe"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
